--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "sweetalert2": "^11.4.8",
     "tooltip": "^1.6.1",
     "tooltip-js": "^3.0.0",
     "web-vitals": "^2.1.4",
